--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint:fix": "eslint \"**/*.{vue,ts,js}\" --fix"
   },
   "dependencies": {
-    "@vueuse/core": "^9.0.0",
+    "@vueuse/core": "^9.13.0",
     "ant-design-vue": "1.7.8",
     "axios": "^0.27.2",
     "core-js": "^3.24.0",
+    "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "sortablejs": "^1.15.0",
@@ -24,8 +25,11 @@
     "@types/lodash-es": "^4.17.6",
     "@types/sortablejs": "^1.15.0",
     "@vitejs/plugin-vue2": "^1.1.2",
+    "@vitejs/plugin-vue2-jsx": "^1.1.0",
     "eslint": "^8.20.0",
     "husky": "^8.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.10.1",
