--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.2",
     "vite": "^3.0.3",
+    "vite-plugin-dts": "^2.1.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-windicss": "^1.8.7",
     "vue-template-compiler": "^2.7.8",
