--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
     "@iconify/json": "^2.1.83",
+    "@types/lodash": "^4.14.192",
     "@types/lodash-es": "^4.17.6",
     "@types/sortablejs": "^1.15.0",
     "@vitejs/plugin-vue2": "^1.1.2",
@@ -30,6 +31,7 @@
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lodash": "^4.17.21",
     "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.10.1",
