--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.24.0",
     "dayjs": "^1.11.7",
+    "element-ui": "^2.15.13",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "sortablejs": "^1.15.0",
